# moo-skills

./: .gitignore  README.md
.claude-plugin/: marketplace.json  plugin.json
docs/: branch-86d1fejc4-documentation.md
docs/grooming/: 2026-05-19-cost-billing-discovery-requirements.md
moo-cloud-bill/: README.md
moo-cloud-bill/tests/: _fakes.py  test_acute_client.py  test_config.py  test_configure.py  test_findings.py  test_mapper.py  test_push.py  test_push_read.py  test_scan.py
skills/adversarial-pr-review/: SKILL.md
skills/api-contracts-reference/: SKILL.md
skills/attribution-middleware-discovery/: SKILL.md
skills/backend-api-testing/: SKILL.md
skills/backend-unit-testing/: SKILL.md
skills/cost-billing-adversarial-review/: SKILL.md
skills/cost-billing-bootstrap/: SKILL.md
skills/cost-billing-bootstrap-cpo/: SKILL.md
skills/cost-billing-bootstrap-finance/: SKILL.md
skills/cost-billing-bootstrap-team-engineer/: SKILL.md
skills/cost-billing-bootstrap-team-product/: SKILL.md
skills/cost-billing-cloud-bill/: SKILL.md
skills/cost-billing-discovery/: SKILL.md
skills/cost-billing-drift-lint/: SKILL.md
skills/cost-billing-instrument/: SKILL.md
skills/cost-billing-reconcile/: SKILL.md
skills/cost-billing-shared/: README.md  SUITE_README.md  anchor-taxonomy.md  (+7 more)
skills/cost-billing/cloud-bill-cli/: .dockerignore  .gitignore  AWS_SCHEDULING.md  Dockerfile  README.md  pyproject.toml
skills/cost-billing/cloud-bill-cli/scripts/: aws-fargate-setup.sh
skills/cost-billing/cloud-bill-cli/src/moo_cloud_bill/: __init__.py  acute_client.py  aws.py  cli.py  config.py  credentials.py  cur_columns.py  errors.py  findings.py  mapper.py  models.py  report_definition.py  ui.py
skills/cost-billing/cloud-bill-cli/src/moo_cloud_bill/assets/: cur-column-map.yaml
skills/cost-billing/cloud-bill-cli/src/moo_cloud_bill/commands/: configure.py  detect.py  init.py  push.py  review.py  verify.py
skills/cost-billing/cloud-bill-cli/tests/: _fakes.py  test_acute_client.py  test_acute_contract.py  test_aws_errors.py  test_cli.py  test_config.py  test_configure.py  test_credentials.py  test_cur_columns.py  test_detect.py  test_findings.py  test_init.py  test_mapper.py  test_models.py  test_push.py  test_push_read.py  test_report_definition.py  test_review.py  test_scan.py  test_seed.py  test_verify.py
tasks/: prd-cloud-bill-cur-report.md
(+311 files in other folders)
