[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moo-cloud-bill"
version = "0.1.0"
description = "Customer CLI: configure an AWS Legacy CUR and push it to Moolabs Acute for cost attribution."
requires-python = ">=3.11"
# boto3/pyarrow/httpx/pyyaml are the tool's real runtime deps (used from Phase 2+).
# Phase 1 code (init/detect/config/credentials) imports only the stdlib, so the
# test suite runs without these installed (pythonpath=src; nothing here imports them).
dependencies = [
    "boto3>=1.34",
    "pyarrow>=15",
    "httpx>=0.27",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
moo-cloud-bill = "moo_cloud_bill.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/moo_cloud_bill"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
